--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,26 @@ input {
   font-size: 16px;
   line-height: 1.5;
 }
+
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.content {
+  max-width: 1160px;
+  padding: 0 34px;
+  margin: 0 auto;
+}
+
+input {
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+a {
+  text-decoration: none;
+}
