added styles for mobile

--- a/src/styles/extends.scss
+++ b/src/styles/extends.scss
@@ -5,3 +5,7 @@
 }
 
 $greenColor: #5fb709;
+$break-point-tablet-lg: 956px;
+$break-point-tablet: 768px;
+$break-point-phone-lg: 620px;
+$break-point-phone: 550px;
