--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,16 @@
 @import "styles/extends.scss";
 
 .restaurant-card {
-  $height: 357px;
-  height: $height;
+  --height: 357px;
+  height: var (--height);
   width: 100%;
   cursor: pointer;
+  @media (max-width: $break-point-phone) {
+    --height: 330px;
+  }
+
   &__img {
-    height: $height * 0.7;
+    height: calc(var(--height) * 0.7);
     width: 100%;
     object-fit: cover;
   }
@@ -27,9 +31,18 @@
 }
 
 .restaurant-list {
+  --card-width: 348px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(348px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(var(--card-width), 1fr));
   gap: 40px 20px;
+  @media (max-width: $break-point-tablet-lg) {
+    row-gap: 20px;
+    --card-width: 340px;
+  }
+  @media (max-width: $break-point-phone) {
+    row-gap: 20px;
+    --card-width: 280px;
+  }
 }
 
 .header {
@@ -38,17 +51,31 @@
   padding: 16px 0;
   background-color: white;
   z-index: 1;
+  width: 100%;
 
   &__inner {
     @extend %flex-row;
+  }
+  &__logo {
+    height: 24px;
+    width: auto;
+    @media (max-width: 550px) {
+      height: 14px;
+    }
   }
   &__delivery-info {
     @extend %flex-row;
     margin-left: 7vw;
     justify-content: flex-start;
+    @media (max-width: $break-point-tablet) {
+      display: none;
+    }
   }
   &__search {
     margin-left: auto;
+    @media (max-width: $break-point-tablet) {
+      display: none;
+    }
   }
   &__link {
     margin-left: 40px;
@@ -59,19 +86,59 @@
       text-decoration: unerline;
     }
   }
+  &__toggle-buttons {
+    display: none;
+    margin-left: auto;
+
+    @media (max-width: $break-point-tablet) {
+      display: flex;
+    }
+  }
+  &__toggle-btn {
+    display: flex;
+    align-items: center;
+    padding: 11px 5px;
+    cursor: pointer;
+  }
+}
+
+.mobile-controls {
+  display: none;
+  position: relative;
+
+  @media (max-width: $break-point-tablet) {
+    display: flex;
+  }
+  &__close {
+    position: absolute;
+    font-size: 2em;
+    padding: 2px 10px;
+    right: 0;
+  }
 }
 
 .control {
   $border-color: #e0e0e0;
-  @extend %flex-row;
-  border: 1px solid $border-color;
-  box-sizing: border-box;
-  border-radius: 2px;
-  padding: 11px 16px;
-  transition: all 0.3s;
+  &__input-wrapper {
+    @extend %flex-row;
+    border: 1px solid $border-color;
+    box-sizing: border-box;
+    border-radius: 2px;
+    padding: 11px 16px;
+    transition: all 0.3s;
+  }
+
   &__input {
     min-height: 24px;
     line-height: 24px;
+    &--time {
+      max-width: 75px;
+    }
+    &--small {
+      @media (max-width: $break-point-tablet-lg) {
+        max-width: 75px;
+      }
+    }
   }
   &__img {
     width: 14px;
@@ -87,16 +154,29 @@
   &--focused {
     border-color: darken($border-color, 20);
   }
+  &__label {
+    font-size: 14px;
+    color: #626262;
+    margin-bottom: 8px;
+  }
 }
 
 .footer {
   background-color: #262626;
   padding: 64px 0;
 
+  @media (max-width: $break-point-tablet) {
+    padding: 40px 0;
+  }
+
   &__top,
   &__bottom {
     @extend %flex-row;
     align-items: flex-start;
+    @media (max-width: $break-point-phone-lg) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__top {
@@ -107,12 +187,18 @@
 
   &__logo {
     margin-right: 40px;
+    @media (max-width: $break-point-tablet) {
+      margin-bottom: 40px;
+    }
   }
 
   &__left,
   &__copyright {
     flex-basis: 45vw;
     padding-right: 40px;
+    @media (max-width: $break-point-phone-lg) {
+      flex-basis: initial;
+    }
   }
 
   &__left {
@@ -125,13 +211,22 @@
   &__brands {
     @extend %flex-row;
     margin-bottom: 40px;
+    @media (max-width: $break-point-tablet) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__mobile-app {
     display: inline-block;
-
+    margin-right: 20px;
     &::first-of-type {
       margin-right: 20px;
+    }
+    @media (max-width: $break-point-tablet) {
+      display: block;
+      margin-bottom: 20px;
+      margin-right: 0;
     }
   }
 
@@ -146,11 +241,28 @@
     .links__link:not(:last-of-type) {
       margin-right: 40px;
     }
+    @media (max-width: $break-point-phone-lg) {
+      flex-direction: column;
+      align-items: flex-start;
+      order: 1;
+      margin: 20px 0;
+    }
   }
 
   &__copyright {
     color: white;
     font-size: 14px;
+    @media (max-width: $break-point-phone-lg) {
+      order: 1;
+    }
+  }
+
+  &__misc {
+    @media (max-width: $break-point-phone-lg) {
+      display: flex;
+      flex-direction: column;
+      margin-top: 20px;
+    }
   }
 }
 
@@ -208,6 +320,7 @@
     right: 10px;
     width: 14px;
     height: 8px;
+    pointer-events: none;
   }
 }
 
